# repo-template-pico

./: CMakeLists.txt  README.md
cmake/: CMakeLists.txt  compiler_settings.cmake  pico_env.cmake
inc/: CMakeLists.txt
src/: CMakeLists.txt
